--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -2,54 +2,27 @@
 
 /* Reset unusual Firefox-on-Android default style, see https://github.com/necolas/normalize.css/issues/214*/
 @media (max-width: 991px) { 
-    .form-text, .form-textarea, .block-superfish select { 
-        background-image: none; 
-    } 
-    
-    nav {
-        padding: 20px;
-    }
+  .form-text, .form-textarea, .block-superfish select { background-image: none; }   
+  nav { padding: 20px; }
 }
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 * { transition: all 0.3s ease-out; } 
 
 
-body { 
-	color: #666666;
-    font-family: 'Open Sans', sans-serif; 
-    font-size: 14px; 
-    line-height: 1.5;
-}
+body { color: #666666; font-family: 'Open Sans', sans-serif; font-size: 14px; line-height: 1.5; }
 
-p { 
-    margin: 0 0 0; 
-    padding: 0; 
-}
+p { margin: 0 0 0; padding: 0; }
 
-a, a:visited {
-	color: #E54D1B;
-	text-decoration: none;
-}
+a, a:visited { color: #E54D1B; text-decoration: none; }
 
-a:hover {
-	color: #FF4D4D;
-    text-decoration: none;
-}
+a:hover { color: #FF4D4D; text-decoration: none; }
 
-a:focus {
-    text-decoration: none;
-}
+a:focus { text-decoration: none; }
 
-blockquote { 
-    margin: 40px 40px 24px; 
-    border-left: none; 
-    padding-left: 0; 
-    position: relative; 
-    color: #999; 
-}
+blockquote { margin: 40px 40px 24px; border-left: none; padding-left: 0; position: relative; color: #999; }
 
-blockquote:before { content: "\201C"; display: block; font-size: 30px; left: -20px; top: 5px; position: absolute;  }
+blockquote:before { content: "\201C"; display: block; font-size: 30px; left: -20px; top: 5px; position: absolute; }
 
 blockquote p { font-size: 14px; line-height: 160%; font-weight: 400; }
 
@@ -58,86 +31,42 @@ img { display: block; height: auto; max-width: 100%; }
 #bottom-content { color: #ffffff; }
 
 /* selections */
-::-moz-selection { 
-    background: rgb(255,255,158);
-}
 
-::selection { 
-    background: rgb(255,255,158);
-}
+::-moz-selection { background: rgb(255,255,158); }
 
-img::selection { 
-    background: transparent;
-}
+::selection { background: rgb(255,255,158); }
 
-img::-moz-selection	{ 
-    background: transparent;
-}
+img::selection { background: transparent; }
 
-body {
-    -webkit-tap-highlight-color: rgb(255,255,158);
-}
+img::-moz-selection	{ background: transparent; }
 
+body { -webkit-tap-highlight-color: rgb(255,255,158); }
 
-/*Heading*/
-h1, h2, h3, h4, h5, h6 { 
-    font-weight: bold;
-    
-    line-height: 120%; 
-    margin: 20px 0 10px 0;
-    
-    font-family: 'Open Sans', sans-serif; 
-    color:#666666;
-}
+/* heading */
+
+h1, h2, h3, h4, h5, h6 { font-weight: bold; line-height: 120%; margin: 20px 0 10px 0; font-family: 'Open Sans', sans-serif; color:#666666; }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { color: #444; }
 
-h1 { 
-	font-size: 68px;
-	line-height: 48px;
-	letter-spacing: -1px;
-}
+h1 { font-size: 68px; line-height: 48px; letter-spacing: -1px; }
 
-h2 { 
-	font-size: 42px;
-	line-height: 1;
-}
+h2 { font-size: 42px; line-height: 1; }
 
-h3 { 
- 	font-size: 26px;
-	line-height: 36px;
-}
+h3 { font-size: 26px; line-height: 36px; }
 
-h4 { 
-	font-size: 22px;
-	line-height: 30px;
-}
+h4 { font-size: 22px; line-height: 30px; }
 
 h5 { font-size: 18px }
 
 h6 { font-size: 16px }
 
-.title-sep { 
-    clear: both; 
-    margin-bottom: 20px; 
-    position: relative;
-    color: #666666;
-    font-weight: bold;
-	font-size: 14px;
-	text-transform: uppercase;
-    text-shadow: 1px 1px 1px #FFFFFF;
-}
+.title-sep { clear: both; margin-bottom: 20px; position: relative; color: #666666; font-weight: bold; font-size: 14px; text-transform: uppercase; text-shadow: 1px 1px 1px #FFFFFF; }
 
 .title-sep .glyphicon { font-size: 13px; padding-right: 18px; }
 
+/* tables */
 
-/*tables*/
-table { 
-    width: 100%; 
-    margin-top: 20px;
-    margin-bottom: 20px; 
-    border: 1px solid #dfdfdf; 
-}
+table { width: 100%; margin-top: 20px; margin-bottom: 20px; border: 1px solid #dfdfdf; }
 
 table tbody { border-top: none; }
 
@@ -145,260 +74,98 @@ table tr.even, table tr.odd, th { background-color: transparent; border-bottom: 
 
 thead tr th, thead tr td, tbody tr th, tbody tr td { padding: 8px; line-height: 142%; vertical-align: top; }
 
-/*header*/
-#header { 
-    margin: 0 auto;
-	padding:30px 0 0;
-	/*z-index: 1000;*/
-	width: 100%;
-	position: relative;
-}
+/* header */
 
-body.html.front #header {
-    padding:0 0 0;
-}
+#header { margin: 0 auto; padding:30px 0 0; width: 100%; position: relative; }
 
-/*social*/
-div.social {
-    margin: 0;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    float:right;
-    z-index:1;
-}
+.front #header { padding:0 0 0; }
 
-div.social ul.social{
-    list-style: none;
-}
+/* social */
 
-div.social ul.social li{
-    list-style: none;
-    padding: 0 0 0 5px;
-    float: left;
-    font-size: 14px;
-    color: #6B6B6B;
-}
-div.social ul.social li a {
-    float: left;
-}
+div.social { margin: 0; position: absolute; right: 10px; top: 10px; float:right; z-index:1; }
 
-div.social ul.social li a {
-    width: 36px;
-    height: 36px;
-    margin-top: 0px;
-    background: url(../images/local/social.png) no-repeat;
-    text-indent: -999em;
-    opacity: 0.5;
-}
+div.social ul.social{ list-style: none; }
 
-div.social ul.social li a:hover, #social2 .social a:hover {
-    opacity: 0.9;
-}
+div.social ul.social li{ list-style: none; padding: 0 0 0 5px; float: left; font-size: 14px; color: #6B6B6B; }
 
-div.social ul.social li a.twitter, #social2 .social a.twitter {
-    background-position: 0px 0;
-}
-div.social ul.social li a.facebook, #social2 .social a.facebook {
-    background-position: -61px 0;
-}
-div.social ul.social li a.gplus, #social2 .social a.gplus {
-    background-position: -121px 0;
-}
-div.social ul.social li a.youtube, #social2 .social a.youtube {
-    background-position: -177px 0;
-}
-div.social ul.social li a.rss, #social2 .social a.rss {
-    background-position: -242px 0;
-}
-div.social ul.social li a.skype, #social2 .social a.skype {
-    background-position: -304px 0;
-}
+div.social ul.social li a { float: left; }
 
-#social2 div.social {
-    text-align: center;
-    float: none;
-    display: none;
-}
+div.social ul.social li a { width: 36px; height: 36px; margin-top: 0px; background: url(../images/local/social.png) no-repeat; text-indent: -999em; opacity: 0.5; }
 
-#social2 .social br {
-    display: none;
-}
+div.social ul.social li a:hover, #social2 .social a:hover { opacity: 0.9; }
 
-#social2 .social a {
-    padding: 0 0 0 43px;
-    padding-bottom: 36px;
-    background: url(../images/local/social.png) no-repeat;
-    opacity: 0.5;    
-}
+div.social ul.social li a.twitter, #social2 .social a.twitter { background-position: 0px 0; }
+
+div.social ul.social li a.facebook, #social2 .social a.facebook { background-position: -61px 0; }
+
+div.social ul.social li a.gplus, #social2 .social a.gplus { background-position: -121px 0; }
+
+div.social ul.social li a.youtube, #social2 .social a.youtube { background-position: -177px 0; }
+
+div.social ul.social li a.rss, #social2 .social a.rss { background-position: -242px 0; }
+
+div.social ul.social li a.skype, #social2 .social a.skype { background-position: -304px 0; }
+
+#social2 .social { text-align: center; float: none; display: none; }
+
+#social2 .social br { display: none; }
+
+#social2 .social a { padding: 0 0 0 41px; padding-bottom: 36px; background: url(../images/local/social.png) no-repeat; opacity: 0.5; }
 
 @media only screen and (max-width: 767px) {
-    div.social {
-        display: none;
-    }
-    #social2 div.social {
-        text-align: center;
-        float: none;
-        display: block;
-        position: relative;
-        right: 0px;
-        top: 0px;
-        margin: 20px auto 40px;
-    }
+    div.social { display: none; }
+    #social2 .social { text-align: center; float: none; display: block; position: relative; right: 0px; top: 0px; margin: 20px auto 40px; }
 }
-
 
 /* header-banner-wrapper */
-.html {
-    overflow-x:hidden;
-}
 
-body.html.front #header-banner-wrapper {
-    height:100vh;
-    min-height: 600px;
-}
+.html { overflow-x:hidden; }
 
-#header-banner-wrapper {    
-    background: #333;
-    background-image: url(../images/local/sunrise_background1.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    min-height: 200px;
-    
-    -webkit-background-size: cover; /* For WebKit*/
-    -moz-background-size: cover;    /* Mozilla*/
-    -o-background-size: cover;      /* Opera*/
-    background-size: cover;         /* Generic*/
-}
+.front #header-banner-wrapper { height:100vh; min-height: 600px; }
 
-#header-banner-wrapper div.slogan {
-    /*max-width: 991px;*/
-    background: url(../images/local/bg_slogan.png) top left repeat;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-    color: #fff;
-    padding: 30px;
-    margin: 0 auto;
-    text-align: center;
-    margin: 11% auto 11%;
-}
+#header-banner-wrapper { background: #333; background-image: url(../images/local/sunrise_background1.jpg); background-attachment: fixed; background-size: cover; min-height: 200px; -webkit-background-size: cover; /* For WebKit*/ -moz-background-size: cover; /* Mozilla*/ -o-background-size: cover; /* Opera*/ background-size: cover; /* Generic*/ }
 
-#header-banner-wrapper div.slogan h2 {
-	font-size: 60px;
-	font-weight: 900;
-    margin: 0px 0px 25px;
-    color:#fff;
-}
+#header-banner-wrapper .slogan { background: url(../images/local/bg_slogan.png) top left repeat; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; color: #fff; padding: 30px; margin: 0 auto; text-align: center; margin: 11% auto 11%; }
 
-#header-banner-wrapper div.slogan p {
-	font-size: 34px;
-	font-weight: 100;
-}
+#header-banner-wrapper .slogan h2 { font-size: 60px; font-weight: 900; margin: 0px 0px 25px; color:#fff; }
+
+#header-banner-wrapper .slogan p { font-size: 34px; font-weight: 100; }
 
 @media only screen and (max-width: 767px) {
-        #header-banner-wrapper div.slogan  h2 {
-        font-size: 30px;
-    }
-
-    #header-banner-wrapper div.slogan p {
-        font-size: 20px;
-    }
+  #header-banner-wrapper .slogan h2 { font-size: 30px; }
+  #header-banner-wrapper .slogan p { font-size: 20px; }
 }
 
-/* Navigation */
+/* navigation */
 
-.sf-menu li {
-    float: none;
-    list-style: none;
-}
+.sf-menu li { float: none; list-style: none; }
 
-#main-navigation { 
-    background: url(../images/local/bg_nav.png) top left repeat;
-    padding: 3px 0;
-    margin-top: 20px;
-}
+#main-navigation { background: url(../images/local/bg_nav.png) top left repeat; padding: 3px 0; margin-top: 20px; }
 
-#main-navigation-inside {
-    border-top: 1px dashed #999;
-    border-bottom: 1px dashed #999;
-    margin: 0 auto;
-    padding: 0;
-    line-height: 36px;
-    text-align: center;
-}
+#main-navigation-inside { border-top: 1px dashed #999; border-bottom: 1px dashed #999; margin: 0 auto; padding: 0; line-height: 36px; text-align: center; }
 
-#main-navigation-inside ul.menu  {
-	display: inline-block;
-}
+#main-navigation-inside ul.menu { display: inline-block; }
 
-#main-navigation-inside ul.menu li {
-	padding: 0 15px;
-	font-size: 14px;
-	font-weight: 700;
-    text-transform: uppercase;
-    transition:none;
-}
+#main-navigation-inside ul.menu li { padding: 0 15px; font-size: 14px; font-weight: 700; text-transform: uppercase; transition:none; }
 
-#main-navigation-inside ul.menu li a {
-	padding: 21px 5px;
-	color: #ddd;
-	text-decoration: none;
-	transition:none;        
-    text-transform: uppercase; 
-    font-weight: 700; 
-    padding: 10px 20px 10px 20px; 
-}
+#main-navigation-inside ul.menu li a { padding: 21px 5px; color: #ddd; text-decoration: none; transition:none; text-transform: uppercase; font-weight: 700; padding: 10px 20px 10px 20px; }
 
-#main-navigation-inside ul.menu li a span {
-	font-family: Georgia, serif;
-	font-style: italic;
-	font-weight: normal;
-}
+#main-navigation-inside ul.menu li a span { font-family: Georgia, serif; font-style: italic; font-weight: normal; }
 
-#main-navigation-inside ul.menu li a:hover, #main-navigation-inside ul.menu li.current-menu-item a, #main-navigation-inside ul.menu li.current_page_item a {
-	color: #fff;
-}
+#main-navigation-inside ul.menu li a:hover, #main-navigation-inside ul.menu li.current-menu-item a, #main-navigation-inside ul.menu li.current_page_item a { color: #fff; }
 
 /* sub-menu */
 
-#main-navigation-inside ul.sf-menu ul { 
-    position: absolute;
-	background: url(../images/local/bg_nav.png) top left repeat;
-    margin-top: 4px;
-	margin-left: -15px;
-	width: 250px;
-	text-align: left;
-    z-index:999;
-    padding:0;
-}
+#main-navigation-inside ul.sf-menu ul { position: absolute; background: url(../images/local/bg_nav.png) top left repeat; margin-top: 4px; margin-left: -15px; width: 250px; text-align: left; z-index:999; padding:0; }
 
-#main-navigation-inside ul.sf-menu ul li { 
-    line-height: 26px;
-	display: block;
-	padding: 0px;
-    font-weight: 400;
-    padding:0;
-    margin:0;
-    text-transform: uppercase;
-}
+#main-navigation-inside ul.sf-menu ul li { line-height: 26px; display: block; padding: 0px; font-weight: 400; padding:0; margin:0; text-transform: uppercase; }
 
-#main-navigation-inside ul.sf-menu ul li a { 
-	color: #ffffff !important;
-	font-size: 14px;
-	font-weight:600;
-	padding: 10px 10px;
-	display: block;
-    text-shadow: none;
-}
+#main-navigation-inside ul.sf-menu ul li a { color: #ffffff !important; font-size: 14px; font-weight:600; padding: 10px 10px; display: block; text-shadow: none; }
 
-#main-navigation-inside ul.menu ul li a:hover {
-	background: #333;
-	color: #ffffff;
-}
+#main-navigation-inside ul.menu ul li a:hover { background: #333; color: #ffffff; }
 
+/* responsive grids */
 
-/* Responsive Grids */
 div.field-item img {
     width:100%;
 }
